bindings: Do not throw exceptions on IDL attributes with Promise types.

Instead, turn them into rejected promises, as specified in
https://heycam.github.io/webidl/#dfn-attribute-getter. Most of the required
mechanisms were already in place due to the work on bug 627309 (which is
essentially the same thing but for IDL operations).

Just like we already do for attributes with the [LenientThis] extended
attribute, we also disable some V8 type checks when an attribute has a
Promise type so that we can receive any exceptions and turn them into a
promise rejection, otherwise attempting to e.g. access

    my_interface.prototype.myPromiseAttr

would result in V8 throwing a TypeError due to the wrong receiver being
specified and we would not be able to turn handle the exception.

Bug: 758023
Change-Id: I45ad4183f6fe7f571e20ac16c3edacfbc87383d8
Reviewed-on: https://chromium-review.googlesource.com/649627
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Yuki Shiino <yukishiino@chromium.org>
Commit-Queue: Raphael Kubo da Costa (rakuco) <raphael.kubo.da.costa@intel.com>
Cr-Commit-Position: refs/heads/master@{#499618}
Former-commit-id: bc08fef84a633ea57aa533cf0ef3d94bf15e263a